--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -74,6 +74,33 @@ a{
     padding: 15px;
 }
 
+.grid-container{
+  display: grid;
+  /* grid-template-columns: repeat(2,1fr);
+  grid-auto-rows: minmax(200px,auto); */
+  grid-template-columns: repeat(12, 1fr);
+  grid-gap: 20px;
+}
+
+.grid-item{
+  text-align: center;
+}
+
+.grid-item>div{
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
+  padding: 100px;
+}
+
+.grid-item>div>span{
+  font-weight: bold;
+  font-size: 3em;
+  color: #fff;
+  margin:auto;
+  text-shadow: 0 0 20px black;
+}
+
 @media screen and (max-width: 768px)
 {
     .glide__arrows{
@@ -84,6 +111,9 @@ a{
     }
     .bgw{
         padding: 10px;
+    }
+    .grid-item{
+      grid-column: span 12;
     }
 }
 
@@ -106,6 +136,10 @@ a{
         width: 50%;
         margin: 0 auto 100px auto;
         padding:50px 150px;
+    }
+
+    .grid-item{
+      grid-column: span 6;
     }
 
     .txt{
