--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -8,6 +8,7 @@
     position: fixed;
     width: 100%;
     z-index: 1000;
+    top: 0px;
 }
 #cssmenu ul
 {
@@ -18,18 +19,18 @@
     color:#EEEEEE;
     background-color: #333333;
     border: transparent;
-    margin:0; 
+    margin:0;
     padding:0;
     list-style:none;
     position:relative;
     z-index:999999990;
-} 
+}
 
 #cssmenu li
 {
     display:inline-block;
-    position:relative;    
-    font-size:0; 
+    position:relative;
+    font-size:0;
     margin:0;
     padding:0;
 }
@@ -37,21 +38,21 @@
 /*Top level items
 ---------------------------------------*/
 
-#cssmenu >ul>li>span, #cssmenu >ul>li>a 
-{   
+#cssmenu >ul>li>span, #cssmenu >ul>li>a
+{
     font-size:18px;
     color:inherit;
     text-decoration:none;
-    padding:14px 20px; 
+    padding:14px 20px;
     font-weight:400;
     text-transform:uppercase;
-    letter-spacing:2px;   
-    display:block;   
+    letter-spacing:2px;
+    display:block;
     position:relative;
     transition:all 0.3s;
 }
 #cssmenu li:hover > span, #cssmenu li:hover > a
-{  
+{
     color:#333333;
     background-color:#F3F3F3;
 }
@@ -74,16 +75,16 @@
 }
 
 #cssmenu .dropdown li {
-    display: block;  
+    display: block;
 }
 
-#cssmenu .dropdown li > span, #cssmenu .dropdown li > a, #cssmenu .clm a, #cssmenu .clm h3 
+#cssmenu .dropdown li > span, #cssmenu .dropdown li > a, #cssmenu .clm a, #cssmenu .clm h3
 {
     font-size:14px;
     font-weight:400;
     font-family:inherit;
     margin:0;
-    padding:8px 20px; 
+    padding:8px 20px;
     display:block;
     color:inherit;
     text-decoration:none;
@@ -94,7 +95,7 @@
 }
 #cssmenu .sub-item {
     background-color:#F3F3F3;
-    position:relative;       
+    position:relative;
     transition:all 0.3s;
 }
 
@@ -111,9 +112,9 @@
     transition:color 0.2s;
 }
 
-#cssmenu .dropdown.right0 {left:auto;right:0;} 
-#cssmenu .dropdown li > .dropdown.right0 {left:auto;right:100%;} 
-       
+#cssmenu .dropdown.right0 {left:auto;right:0;}
+#cssmenu .dropdown li > .dropdown.right0 {left:auto;right:100%;}
+
 #cssmenu li.full-width{
     position:static;
 }
@@ -121,7 +122,7 @@
     width:100%;
     left:0;
     box-sizing:border-box;
-}  
+}
 
 #cssmenu li:hover > .dropdown
 {
@@ -174,12 +175,12 @@
     vertical-align:middle;
     overflow:hidden;/*for IE6*/
 }
-        
+
 #cssmenu .dropdown .arrow {
     transform:rotate(45deg);
     top:50%;margin-top:-6px;
     position:absolute;left:auto;right:20px;
-} 
+}
 
 /*######## styles for mobile mode */
 
@@ -240,12 +241,12 @@
         position:static;
     }
 
-    #cssmenu >ul>li>span, #cssmenu >ul>li>a 
-    {       
+    #cssmenu >ul>li>span, #cssmenu >ul>li>a
+    {
         font-size:22px;
     }
     /* #cssmenu li:hover span, #cssmenu li:hover a {
-     
+
         color:#EEEEEE;
         background-color:#333333;
     }*/
@@ -321,7 +322,7 @@
 #cssmenu.active li a { animation: topItemAnimation 0.5s cubic-bezier(.16,.84,.44,1) 0.08333333333333333s backwards;}
 #cssmenu.active li:nth-of-type(1) a { animation: topItemAnimation 0.5s cubic-bezier(.16,.84,.44,1) 0.5s backwards;}
 #cssmenu.active li:nth-of-type(2) a { animation: topItemAnimation 0.5s cubic-bezier(.16,.84,.44,1) 0.4166666666666667s backwards;}
-#cssmenu.active li:nth-of-type(3) span { animation: topItemAnimation 0.5s cubic-bezier(.16,.84,.44,1) 0.3333333333333333s backwards;}
+#cssmenu.active li:nth-of-type(3) a { animation: topItemAnimation 0.5s cubic-bezier(.16,.84,.44,1) 0.3333333333333333s backwards;}
 #cssmenu.active li:nth-of-type(4) a { animation: topItemAnimation 0.5s cubic-bezier(.16,.84,.44,1) 0.25s backwards;}
 #cssmenu.active li:nth-of-type(5) a { animation: topItemAnimation 0.5s cubic-bezier(.16,.84,.44,1) 0.16666666666666666s backwards;}@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) { #cssmenu.active li a{animation:none!important;}}
 
