--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -124,12 +124,7 @@
     box-sizing:border-box;
 }
 
-#cssmenu li:hover > .dropdown
-{
-    display:block;
-    opacity:1;
-    z-index:1;
-}
+
 
 #cssmenu .dropdown li > .dropdown
 {
@@ -188,9 +183,24 @@
     display: none;
 }
 
+@media only screen and (min-width:768px){
+  #cssmenu li:hover > .dropdown
+  {
+      display:block;
+      opacity:1;
+      z-index:1;
+  }
+}
 @media only screen and (max-width: 768px) {
 
     .menu-icon {display:inline-block;}
+    
+    #cssmenu .dropdown
+    {
+        left:0;
+        position:relative;
+        cursor:default;
+    }
 
     #cssmenu  {
         width:100%;
